src/lcr/c2bsv/parser/C2BSVParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. C2BSVParser.java */
package lcr.c2bsv.parser;

import java.util.*;
import java.io.*;


public class C2BSVParser/*@bgen(jjtree)*/implements C2BSVParserTreeConstants, C2BSVParserConstants {/*@bgen(jjtree)*/
  protected JJTC2BSVParserState jjtree = new JJTC2BSVParserState();
        public static void main (String args []) throws ParseException, FileNotFoundException {
                C2BSVParser parser ;

                if(args.length == 1) {
                        try {
                        parser = new C2BSVParser(new java.io.FileInputStream(args[0]));
                } catch(java.io.FileNotFoundException e){
                        System.out.println("C2BSV:  File " + args[0] + " not found.");
                        return ;
                }
                } else {
                System.out.println("C2BSV:  Usage is java C2BSV inputfile");
                return ;
        }

        try {
                SimpleNode root = parser.TranslationUnit();
                        //root.dump("");
                System.out.println(root.toBSV());

        } catch(ParseException e) {
                System.out.println("C2BSV:  Encountered errors during parse.");
                e.printStackTrace();
        }
        }

  final public SimpleNode TranslationUnit() throws ParseException {
 /*@bgen(jjtree) #root( true) */
  ASTroot jjtn000 = new ASTroot(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        label_1:
        while (true) {
          ExternalDeclaration();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
          case FLOATING_POINT_LITERAL:
          case STRING_LITERAL:
          case RETURN:
          case STRUCT:
          case WHILE:
          case FLOAT:
          case VOID:
          case INT:
          case IF:
          case IDENTIFIER:
          case SEMICOLON:
          case 31:
          case 36:
          case 65:
          case 66:
          case 70:
          case 71:
          case 72:
          case 73:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
        }
      } catch (ParseException e) {
                System.err.println(e.toString());
                Token token = getNextToken();
      }
          jjtree.closeNodeScope(jjtn000,  true);
          jjtc000 = false;
         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public void ExternalDeclaration() throws ParseException {
    try {
      if (jj_2_1(2147483647)) {
        StatementList();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
        case FLOAT:
        case VOID:
        case INT:
          Declaration();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (ParseException e) {
                System.err.println(e.toString());
                Token t = getNextToken();
                while(!(t.kind!=SEMICOLON && t.kind!=EOF))
                        t=getNextToken();
    }
  }

  final public void FunctionDefinition() throws ParseException {
 /*@bgen(jjtree) #FunctionDefinition( true) */
  ASTFunctionDefinition jjtn000 = new ASTFunctionDefinition(JJTFUNCTIONDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
          ASTFunctionReturn jjtn001 = new ASTFunctionReturn(JJTFUNCTIONRETURN);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
      try {
        if (jj_2_2(2147483647)) {
          DeclarationSpecifiers();
        } else {
          ;
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001,  1);
          }
      }
                                                                                          ASTFunctionHeader jjtn002 = new ASTFunctionHeader(JJTFUNCTIONHEADER);
                                                                                          boolean jjtc002 = true;
                                                                                          jjtree.openNodeScope(jjtn002);
      try {
        Declarator();
      } catch (Throwable jjte002) {
                                                                                          if (jjtc002) {
                                                                                            jjtree.clearNodeScope(jjtn002);
                                                                                            jjtc002 = false;
                                                                                          } else {
                                                                                            jjtree.popNode();
                                                                                          }
                                                                                          if (jjte002 instanceof RuntimeException) {
                                                                                            {if (true) throw (RuntimeException)jjte002;}
                                                                                          }
                                                                                          if (jjte002 instanceof ParseException) {
                                                                                            {if (true) throw (ParseException)jjte002;}
                                                                                          }
                                                                                          {if (true) throw (Error)jjte002;}
      } finally {
                                                                                          if (jjtc002) {
                                                                                            jjtree.closeNodeScope(jjtn002, true);
                                                                                          }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRUCT:
      case FLOAT:
      case VOID:
      case INT:
        DeclarationList();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
                                ASTFunctionBody jjtn003 = new ASTFunctionBody(JJTFUNCTIONBODY);
                                boolean jjtc003 = true;
                                jjtree.openNodeScope(jjtn003);
      try {
        CompoundStatement();
      } catch (Throwable jjte003) {
                                if (jjtc003) {
                                  jjtree.clearNodeScope(jjtn003);
                                  jjtc003 = false;
                                } else {
                                  jjtree.popNode();
                                }
                                if (jjte003 instanceof RuntimeException) {
                                  {if (true) throw (RuntimeException)jjte003;}
                                }
                                if (jjte003 instanceof ParseException) {
                                  {if (true) throw (ParseException)jjte003;}
                                }
                                {if (true) throw (Error)jjte003;}
      } finally {
                                if (jjtc003) {
                                  jjtree.closeNodeScope(jjtn003, jjtree.nodeArity() > 0);
                                }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  true);
          }
    }
  }

  final public void Declaration() throws ParseException {
 /*@bgen(jjtree) #Declaration( true) */
  ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      DeclarationSpecifiers();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 36:
        InitDeclaratorList();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  true);
          }
    }
  }

  final public void DeclarationList() throws ParseException {
    label_2:
    while (true) {
      Declaration();
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_2;
      }
    }
  }

  final public void DeclarationSpecifiers() throws ParseException {
    TypeSpecifier();
    if (jj_2_4(2147483647)) {
      DeclarationSpecifiers();
    } else {
      ;
    }
  }

  final public void TypeSpecifier() throws ParseException {
 /*@bgen(jjtree) Type */
 ASTType jjtn000 = new ASTType(JJTTYPE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        t = jj_consume_token(VOID);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                      jjtn000.jjtSetValue(t.image);
        break;
      case INT:
        t = jj_consume_token(INT);
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
                     jjtn000.jjtSetValue(t.image);
        break;
      case FLOAT:
        t = jj_consume_token(FLOAT);
                        jjtree.closeNodeScope(jjtn000, true);
                        jjtc000 = false;
                       jjtn000.jjtSetValue(t.image);
        break;
      case STRUCT:
        StructSpecifier();
                              jjtree.closeNodeScope(jjtn000, true);
                              jjtc000 = false;
                             jjtn000.jjtSetValue("Struct");
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void StructSpecifier() throws ParseException {
 Token t;
    jj_consume_token(STRUCT);
    if (jj_2_5(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
                                                           ASTStructName jjtn001 = new ASTStructName(JJTSTRUCTNAME);
                                                           boolean jjtc001 = true;
                                                           jjtree.openNodeScope(jjtn001);
        try {
                                                           jjtree.closeNodeScope(jjtn001, true);
                                                           jjtc001 = false;
                                                          jjtn001.jjtSetValue(t.image);
        } finally {
                                                           if (jjtc001) {
                                                             jjtree.closeNodeScope(jjtn001, true);
                                                           }
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(31);
      StructDeclarationList();
      jj_consume_token(32);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        t = jj_consume_token(IDENTIFIER);
                             ASTStructName jjtn002 = new ASTStructName(JJTSTRUCTNAME);
                             boolean jjtc002 = true;
                             jjtree.openNodeScope(jjtn002);
        try {
                             jjtree.closeNodeScope(jjtn002, true);
                             jjtc002 = false;
                            jjtn002.jjtSetValue(t.image);
        } finally {
                             if (jjtc002) {
                               jjtree.closeNodeScope(jjtn002, true);
                             }
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void StructDeclarationList() throws ParseException {
 /*@bgen(jjtree) StructBody */
  ASTStructBody jjtn000 = new ASTStructBody(JJTSTRUCTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
           ASTDeclaration jjtn001 = new ASTDeclaration(JJTDECLARATION);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
        try {
          StructDeclaration();
        } catch (Throwable jjte001) {
           if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
        } finally {
           if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 0);
           }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STRUCT:
        case FLOAT:
        case VOID:
        case INT:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void InitDeclaratorList() throws ParseException {
    InitDeclarator();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(33);
                                ASTListOfDeclarations jjtn001 = new ASTListOfDeclarations(JJTLISTOFDECLARATIONS);
                                boolean jjtc001 = true;
                                jjtree.openNodeScope(jjtn001);
      try {
        InitDeclarator();
      } catch (Throwable jjte001) {
                                if (jjtc001) {
                                  jjtree.clearNodeScope(jjtn001);
                                  jjtc001 = false;
                                } else {
                                  jjtree.popNode();
                                }
                                if (jjte001 instanceof RuntimeException) {
                                  {if (true) throw (RuntimeException)jjte001;}
                                }
                                if (jjte001 instanceof ParseException) {
                                  {if (true) throw (ParseException)jjte001;}
                                }
                                {if (true) throw (Error)jjte001;}
      } finally {
                                if (jjtc001) {
                                  jjtree.closeNodeScope(jjtn001,  2);
                                }
      }
    }
  }

  final public void InitDeclarator() throws ParseException {
    Declarator();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
                             ASTInitializedAs jjtn001 = new ASTInitializedAs(JJTINITIALIZEDAS);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
      try {
        Initializer();
      } catch (Throwable jjte001) {
                             if (jjtc001) {
                               jjtree.clearNodeScope(jjtn001);
                               jjtc001 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte001 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte001;}
                             }
                             if (jjte001 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte001;}
                             }
                             {if (true) throw (Error)jjte001;}
      } finally {
                             if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 0);
                             }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
  }

  final public void StructDeclaration() throws ParseException {
    SpecifierQualifierList();
    StructDeclaratorList();
    jj_consume_token(SEMICOLON);
  }

  final public void SpecifierQualifierList() throws ParseException {
    TypeSpecifier();
    if (jj_2_6(2147483647)) {
      SpecifierQualifierList();
    } else {
      ;
    }
  }
